example/fail/fail_type10.dl

int $[main]{
    struct example{
        int a ;
        string b;
    } obj;
    string a;
    a <- obj ; //incompatible type
    
}

